scripts and baselist

--- a/src/app/pages/patient-details/patient-details.page.html
+++ b/src/app/pages/patient-details/patient-details.page.html
@@ -33,6 +33,17 @@
         <ion-icon name="open" slot="start"></ion-icon>
         Notes
       </ion-button>
+
+      <ion-button expand="full" routerLink="/scripts/{{entity.id}}" >
+        <ion-icon name="open" slot="start"></ion-icon>
+        Scripts
+      </ion-button>
+
+      <ion-button expand="full" routerLink="/notes/{{entity.id}}" >
+        <ion-icon name="open" slot="start"></ion-icon>
+        Measurements
+      </ion-button>
+
     </ion-card-content>
   </ion-card>
   
