--- a/src/app/pages/add-note/add-note.page.html
+++ b/src/app/pages/add-note/add-note.page.html
@@ -13,6 +13,10 @@
         <ion-label position="stacked">Description</ion-label>
         <ion-input formControlName="description" type="text"> </ion-input>
       </ion-item>
+
+      <ion-item *ngIf="!formGroup.controls.description.valid  && (formGroup.controls.description.valid || submitAttempt)">
+        <p>Please enter description</p>
+      </ion-item>
     </ion-list>
 
     <ion-row class="signin">
