--- a/src/app/pages/scripts/scripts.page.html
+++ b/src/app/pages/scripts/scripts.page.html
@@ -34,6 +34,14 @@
         </ion-card-header>
         <ion-card-content text-center>
           {{ entity.notes }}
+          <ion-list>
+              <ion-item
+                button
+                *ngFor="let item of entity.scriptItems; index as i"
+              >
+                {{ item.drug }} {{ item.frequency }} {{ item.duration }}
+              </ion-item>
+            </ion-list>
         </ion-card-content>
       </ion-card>
     </ion-item>
