--- a/src/app/pages/patient-details/patient-details.page.html
+++ b/src/app/pages/patient-details/patient-details.page.html
@@ -39,7 +39,7 @@
         Scripts
       </ion-button>
 
-      <ion-button expand="full" routerLink="/notes/{{entity.id}}" >
+      <ion-button expand="full" routerLink="/measurements/{{entity.id}}" >
         <ion-icon name="open" slot="start"></ion-icon>
         Measurements
       </ion-button>
