--- a/src/app/pages/patients/patients.page.html
+++ b/src/app/pages/patients/patients.page.html
@@ -5,6 +5,7 @@
 </ion-header>
 
 <ion-content>
+  <ion-fab-button color="primary"  routerLink="add">+</ion-fab-button>
   <ion-searchbar [(ngModel)]="searchTerm" (ionChange)="searchChanged($event)"></ion-searchbar>
  
   <!-- <ion-item>
