--- a/src/app/pages/patients/patients.page.html
+++ b/src/app/pages/patients/patients.page.html
@@ -20,7 +20,7 @@
  
   <ion-list>
  
-    <ion-item button *ngFor="let item of (results | async)" [routerLink]="['/', 'patients', item.id]">
+    <ion-item button *ngFor="let item of (results | async)" [routerLink]="['/', 'patients', 'view',item.id]">
       <!-- <ion-avatar slot="start">
         <img [src]="item.Poster" *ngIf="item.Poster != 'N/A'">
       </ion-avatar> -->
