--- a/src/app/pages/patients/add-edit-patients/add-edit-patients.component.html
+++ b/src/app/pages/patients/add-edit-patients/add-edit-patients.component.html
@@ -1,6 +1,6 @@
 <ion-header>
   <ion-toolbar>
-    <ion-title>Create Note</ion-title>
+    <ion-title>Add Patient</ion-title>
     <ion-buttons slot="start">
       <ion-back-button></ion-back-button>
     </ion-buttons>
