--- a/src/app/pages/patients/patient-details/patient-details.page.html
+++ b/src/app/pages/patients/patient-details/patient-details.page.html
@@ -8,6 +8,7 @@
 </ion-header>
  
 <ion-content padding>
+  
  
   <ion-card *ngIf="entity">
     <ion-card-header>
@@ -19,6 +20,9 @@
       </ion-card-subtitle>
     </ion-card-header>
     <ion-card-content text-center>
+        <ion-fab-button color="primary"  [routerLink]="['/patients/edit/' ,  id]">
+          <ion-icon name="create"></ion-icon>
+        </ion-fab-button>
       <img [src]="entity.image" class="info-img">
       {{ entity.description }}
     
