fixed navigation upon edit

--- a/src/app/pages/patients/patient-list/patients.page.html
+++ b/src/app/pages/patients/patient-list/patients.page.html
@@ -5,7 +5,7 @@
 </ion-header>
 
 <ion-content>
-  <ion-fab-button color="primary"  routerLink="add">+</ion-fab-button>
+  <ion-fab-button color="primary"  [routerLink]='["/patients/add"]'>+</ion-fab-button>
   <ion-content>
     <ion-searchbar
     [formControl]="searchControl"
