--- a/src/app/pages/patients/patient-list/patients.page.html
+++ b/src/app/pages/patients/patient-list/patients.page.html
@@ -24,8 +24,7 @@
       </ion-avatar> -->
  
       <ion-label text-wrap>
-        <h3>{{ item.firstname }} {{ item.lastname }}</h3>
-        {{ item.gender }} {{ item.birthday }}
+        <h3>{{ item.displayName }} </h3>
       </ion-label>
  
       <!-- <ion-icon slot="end" *ngIf="item.Type == 'movie'" name="videocam"></ion-icon>
